[tool.poetry]
name = "kjmlab"
version = "0.1.0"
description = ""
authors = ["AriRyo <come11926323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.3"
notebook = "^7.2.1"
matplotlib = "^3.9.1"
pyglet = "^2.0.16"
wheel = "^0.43.0"
numpy = "1.26.3"
moviepy = "^1.0.3"
z3-solver = "^4.13.0.0"
click = "^8.1.7"
torch = {version = "^2.4.0+cu121", source = "torch_cu121"}
torchvision = {version = "^0.19.0+cu121", source = "torch_cu121"}
torchaudio = {version = "^2.4.0+cu121", source = "torch_cu121"}
gym-gridworlds = "^0.0.2"
ffmpeg = "^1.4"
torchrl = "^0.5.0"
mujoco-py = ">=2.1,<2.2"
tqdm = "^4.66.5"
cython = "<3"
gym = {extras = ["all"], version = "^0.26.2"}


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
